src/style.css
ons-button,
ons-button.button--material {
  background-color: transparent !important;
}

ons-toolbar {
  height: 0px !important;
  position: fixed !important;
  bottom: 0px !important;
}

ons-toolbar.toolbar-hidden {
  display: none;
}

ons-toolbar.toolbar-showing {
  display: inline-block;
}

.react-grid-item {
  overflow: hidden;
}

.player-controls {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  margin: 0 auto;
}

.tracklist hr {
  margin-top: 5px;
  margin-bottom: 5px;
}

.album-title-text-default {
  height: 100px;
  font-size: 14px;
  color: black;
}
.grid-tracklist {
  font-size: 10px;
  display: inline-block;
  z-index: 100;
  margin: 1em 2em 1em 2em;
  padding-bottom: 70px;
}

.bpm-track-button {
  display: block;
}
.main-album-grid {
  width: 100%;
}

.album-title-text {
  position: relative;
  top: 20px;
  color: black;
}

.album-text-info {
  display: flex;
  flex-direction: column;
  border: solid;
  border-width: 0.5px;
}
.album-background-image {
  overflow: hidden;
  height: 100vh;
}

/* 
    Album Grid view images and containers 
*/

.album {
  overflow: hidden;
}
img.album-image {
  width: 100%;
  max-width: 100%;
  border-width: 2px;
  border-radius: 2px;
  box-shadow: 7px 9px 3px rgba(0, 0, 0, 0.28);
}

.handle-container {
  z-index: 50;
  height: 0px;
  width: 0px;
  position: absolute;
  top: 0;
  left: 0;
  opacity: 0.5;
}
.handle {
  width: 40px;
  height: 40px;
}
.loading-message {
  width: 300px;
  margin: auto auto;
  margin-top: 200px;
  text-align: center;
}

.loading-text {
  margin-top: 20px;
  font-size: 1.5em;
}
.album-cover {
  overflow: hidden;
}

.control-bar {
  visibility: visible;
  display: flex;
  position: fixed;
  z-index: 300;
  opacity: 0.95;
  bottom: 0;
  width: 100%;
  background-color: white;
  box-shadow: -1px -5px 16px #888888;
  padding: 10px 0px 25px 0px;
}

.control-bar.hidden {
  visibility: hidden;
  opacity: 0;
  transition: visibility 0s 0.5s, opacity 0.5s linear;
}

.now-playing {
  display: flex;
  margin: 0 auto;
  padding: 0px 6px 0px 6px;
}
.album-size-slider {
  width: 50%;
  margin: 0 auto;
}

.playing-inset > {
  height: 100px;
  max-height: 100px;
  position: absolute;
  overflow: hidden;
  width: 100%;
  z-index: 100;
  max-width: 100%;
  background-color: white;
}

.genre-selector {
  font-size: 40px !important;
  text-align: center;
  flex-direction: row;
  display: flex;
  align-self: center;
  flex-basis: 50%;
  padding: 0px 10px 0px 10px;
  white-space: normal;
}

.player-selector {
  font-size: 40px !important;
  display: flex;
  text-align: center;
  flex-direction: row;
  flex-basis: 50%;
  padding: 0px 10px 0px 10px;
  align-self: center;
  white-space: normal;
}
.player-selector ons-toolbar-button {
  margin: 0 auto;
}
.player-selector-dialog .dialog {
  height: auto !important;
}
.layout-and-search {
  display: flex;
  flex-wrap: wrap;
  padding: 0px 20px 0px 20px;
  align-items: center;
}

button.genre-choice,
button.search-button {
  text-transform: none;
  border: solid;
  border-color: rgb(179, 177, 177);
  border-width: 1px;
  margin-left: 1em;
  margin: 5px 5px 5px 0px;
  padding: 2px 12px;
}
button.order-select {
  width: 70px;
}
.search-clear {
  background-color: #dcdcdc;
  border-radius: 5px;
}
.view-and-search-selector hr {
  margin-top: 0.4rem;
  margin-bottom: 0.4rem;
  padding: 0px 10px 0px 10px;
}
.view-and-search-selector {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
}
.view-and-search-selector ons-button {
  flex-grow: 1;
}

.view-and-search-selector ons-segment {
  margin-bottom: 20px;
  min-width: 120px;
}

.codec {
  color: grey;
  padding: 0 10px 0 10px;
  font-size: 8px;
  font-weight: 800;
  background: #f3ecec;
  border-radius: 3px;
  margin-left: 5px;
  width: auto;
  height: 12px;
}
.now-playing-album-title {
  font-weight: bold;
}
button {
  min-width: 40px !important;
}
.custom-den-controls {
  display: flex;
  flex-wrap: wrap;
  max-width: 400px;
}
.base-lms-controls {
  display: flex;
  padding: 0px 10px 0px 10px;
  max-width: 400px;
}
ons-toolbar-button.player-control-button {
  flex-grow: 1;
  padding: 2px 15px 2px 15px;
}

.custom-den-controls .player-control-button {
  margin-bottom: 0px;
}
.track-title {
  font-size: 14px;
  text-transform: none;
  line-height: 14px;
}
.info-i {
  display: flex;
  text-transform: none;
  background-color: lightgray;
  width: 25px;
  height: 25px;
  border-radius: 15px;
  font-weight: 700;
  font-family: ui-serif;
  text-align: center;
}
.i {
  display: flex;
  text-align: center;
  width: 100%;
  padding-left: 50%;
  position: relative;
  left: -3px;
}

.player-bar {
  display: flex;
}

.card {
  color: black;
}

.now-playing {
  display: block;
}

.now-playing > img {
  max-width: 150px;
  float: right;
  margin-right: 20px;
  margin-bottom: 10px;
}

.now-playing .info {
  width: 100%;
  display: flex;
}
.now-playing-meta {
  flex-basis: 80%;
}
.now-playing-meta,
.control-buttons {
  display: flex;
  flex-direction: column;
  margin-left: 10px;
}
.playing-inset > div {
  height: 100px;
  flex-basis: 20%;
}

.album-info {
  display: flex;
}
.album-info .text-info {
  flex-basis: 80%;
  color: black;
}
.mini-album-cover {
  flex-basis: 20%;
  margin: 5px 15px 5px 15px;
}
.mini-album-cover img {
  width: auto;
  height: 80px;
}

ons-modal.album-modal {
  width: 300px;
  height: 300px;
}
.track-container {
  display: flex;
  flex-direction: row;
}
.track-container .track-info {
  display: flex;
  flex-basis: 80%;
  flex-direction: column;
}
.track-info-controls {
  display: flex;
}
.tracklist-album {
  width: 100%;
  flex-basis: 20%;
}
.track-container .track-info .track-title {
  font-size: 1.4em;
}
.tracklist-album {
  width: 100px;
  display: inline-block;
  float: right;
  transition: 0.2s;
}
.list-track {
  height: 100px;
  border-style: solid;
  border-color: rgb(177, 174, 174);
  margin-top: 10px;
  padding: 10px;
  border-radius: 10px;
  border-width: 2px;
  height: auto;
}
.track-list-dialog {
  z-index: 100;
}
.dialog {
  width: 80%;
  box-shadow: 9px 11px 3px rgba(0, 0, 0, 0.28);
}
.dialog-container {
  max-height: 100%;
  height: 80vh;
}
.btn-icon {
  height: 40px;
}
.selectors {
  display: flex;
  flex-direction: row;
}

.flip-container {
  width: 100%;
  height: auto;
}

.drawer-button {
  position: fixed;
  top: 30px;
  right: 30px;
  z-index: 100;
  background: white;
  opacity: 0.4;
  border: solid;
  border-width: 1px;
}

.view-and-search-selector span {
  font-size: 0.8em;
}

.genre-selector {
  flex-grow: 0;
  padding: 10px 20px 10px 20px;
  margin: 0 auto;
  white-space: nowrap;
}
.player-selector {
  flex-grow: 0;
  padding: 10px 20px 10px 20px;
  white-space: nowrap;
}
button.view-selector.composer-artist {
  min-width: 80px !important;
}
.composer-artist segment__button {
  line-height: 1.1em;
}
segment__button {
  border-color: rgb(232, 233, 233) !important;
  padding: 0px 5px 0px 5px;
}

.search-bar {
  display: flex;
  padding: 0px 20px 0px 20px;
  margin-top: 20px;
}

.track-time {
  padding: 10px 0px 10px 0px;
  width: 80%;
}
.player-control-button {
  margin-bottom: 0px;
  padding: 2px 10px 20px 10px;
}
.now-playing {
  display: flex;
  font-size: 12px;
  margin-top: 1em;
  width: 98%;
  margin: 0 auto;
}
.now-playing-album-cover {
  min-width: 100px;
  max-width: 100%;
  float: right;
  transition: 0.2s;
  position: relative;
  flex-basis: 10%;
}
.now-playing-album-cover ons-button {
  padding: 0px;
}
.library-view {
  z-index: 100;
}
.now-playing > img {
  max-width: 25%;
  float: right;
  margin-right: 4px;
}
.slider-volume {
  margin-bottom: 20px;
  min-width: 200px;
}
.slider-volume ons-range {
  width: 100%;
}
.loading-text {
  font-size: 5em;
}
.tracklist-album {
  width: 80px;
}

.tracklist-artist {
  font-weight: 800;
  margin-left: 10px;
  color: black;
}
.tracklist-album-title {
  margin-left: 10px;
  font-style: italic;
  color: black;
}
ons-range.track-time {
  width: 50%;
}
ons-button.show-controlbar {
  position: fixed;
  bottom: 10px;
  width: 5%;
  right: 5%;
  z-index: 500;
  opacity: 0.5;
  border: solid;
  border-color: #c0bac3;
  border-width: 0.5px;
  border-radius: 6px;
  background-color: white !important;
}
.button--large--cta {
  background-color: transparent !important;
}
.button--large--cta:active {
  background-color: transparent !important;
  opacity: 0.8 !important;
}
.toolbar-activation-zone {
  height: 100px;
  width: 100%;
  z-index: 500;
  position: fixed;
  bottom: 0;
}

.grid-size {
  position: sticky;
  top: 20px;
  margin-left: 20px;
  z-index: 100;
  width: 200px;
  border: solid;
  border-width: 0.5px;
  border-color: azure;
  border-radius: 3px;
}
.grid-size input {
  opacity: 0.3;
}
.grid-size ons-range {
  width: 200px;
}

/* .player-selector-dialog .dialog {
    width: 25%;
    left: 15%;
    top: none;
    bottom:100px;
} */
.disc-number {
  font-size: 18px;
  margin-bottom: 15px;
}
.disc-number-text {
  margin-left: 10px;
}
@media (max-width: 800px) {
  .grid-size {
    display: none;
  }
  .page__content {
    margin-top: 35px;
  }
  .player-bar {
    flex-direction: column;
  }
  #target,
  .control-content {
    flex-direction: column;
  }
}

@media (max-width: 450px) {
  .control-content {
    width: 100%;
  }
  /* .player-selector-dialog .dialog {
        width: unset;
        left: 50%;
        top: 50%;
    } */
  .layout-and-search {
    justify-content: space-around;
  }
  .search-bar {
    justify-content: center;
    align-self: center;
  }
}

